--- a/css/style.css
+++ b/css/style.css
@@ -3070,7 +3070,7 @@ footer
 
 	line-height:120%;
 
-	color:#333333; 
+	color:#FFF; 
 
 	text-align:left;	
 
@@ -3886,9 +3886,11 @@ footer
 
 	width:100%;
 
-	height:330px;
+	height:100%;
 
   	background-color:#FFFFFF;	
+  	background-image: url('../assets/backg/contacto.jpg');
+  	background-repeat: no-repeat;
 
 }
 
@@ -3902,7 +3904,7 @@ footer
 
 	right:0;
 
-	margin-top: 20px;	
+	margin-top: 474px;	
 
 }
 
@@ -3948,7 +3950,7 @@ footer
 
 	font-size:20px;
 
-	color:#333333; 
+	color:#FFF; 
 
 	text-align:left;	
 
@@ -4002,7 +4004,7 @@ footer
 
 	font-size:14px;
 
-	color:#444444; 
+	color:#FFF; 
 
 	text-align:left;
 
@@ -4024,7 +4026,7 @@ footer
 
 	font-size:14px;
 
-	color:#4c4c4c; 
+	color:#fff; 
 
 	text-align:left;
 
@@ -4042,7 +4044,7 @@ footer
 
 	font-size:14px;
 
-	color:#4c4c4c; 
+	color:#fff; 
 
 	text-align:left;
 
