Cambios en estilos y plantillas
-Cambios en hoja de estilos correspondientes al texto en subsecciones de
"what we do 4 you".
-Menú de navegación de subsecciones en cada una de las mismas.

--- a/css/style.css
+++ b/css/style.css
@@ -7841,3 +7841,7 @@ h1, h2, h3, h4, h5, h6
 .whatwedomenu .filter-button a{
 	text-decoration: none;
 }
+.wwd_title{color:#3F3F3F;}
+.redlist{color:#D60000 !important;}
+.active{background-color: #8E8E8E !important; cursor:default;}
+.active:hover{color:#FFFFFF !important;}
