--- a/css/style.css
+++ b/css/style.css
@@ -3894,6 +3894,26 @@ footer
 
 }
 
+
+.module-jobs-background
+
+{
+
+  	position:relative;
+
+	float:left;
+
+	width:100%;
+
+	height:100%;
+
+
+  	
+  	background-repeat: no-repeat;
+
+}
+
+
 #module-contact-holder
 
 {
@@ -3907,6 +3927,22 @@ footer
 	margin-top: 474px;	
 
 }
+
+
+#module-jobs-holder
+
+{
+
+	position:absolute;
+
+	width: 635px;	
+
+	right:0;
+
+	margin-top: 474px;	
+
+}
+
 
 .contact-information
 
@@ -7841,7 +7877,158 @@ h1, h2, h3, h4, h5, h6
 .whatwedomenu .filter-button a{
 	text-decoration: none;
 }
-.wwd_title{color:#3F3F3F;}
+
+.v1{
+
+            position: absolute;
+            left: 450px;
+            margin-top: 180px;
+            width: 200px;
+            /*display: none;*/
+        }
+        .v2{
+            position: absolute;
+            margin-left: 570px;
+            top: 766px;
+            width: 280px;
+            /*display: none;*/
+        }
+        .v3{
+
+            position: absolute;
+            margin-top: 380px;
+            /*display: none;*/
+        }
+          .v4{
+
+            position: absolute;
+            margin-top: 380px;
+            margin-left: 750px;
+            /*display: none;*/
+        }
+
+    .tooltip{
+    display: inline;
+    position: relative;
+    font-size: 12px;
+	font-family: PT Sans Caption;
+}
+.tooltip:hover:after{
+    background: #F2230E;
+   /* background: rgba(0,0,0,.8);*/
+    border-radius: 5px;
+    bottom: 26px;
+    color: #fff;
+    content: attr(title);
+    left: 20%;
+    padding: 5px 15px;
+    position: absolute;
+    z-index: 98;
+    width: 220px;
+}
+.tooltip:hover:before{
+    border: solid;
+    border-color: #F2230E transparent;
+    border-width: 6px 6px 0 6px;
+    bottom: 20px;
+    content: "";
+    left: 50%;
+    position: absolute;
+    z-index: 99;
+}
+
+
+    .tooltip2{
+    display: inline;
+    position: relative;
+	font-size: 12px;
+	font-family: PT Sans Caption;
+}
+.tooltip2:hover:after{
+    background: #F2230E;
+   /* background: rgba(0,0,0,.8);*/
+    border-radius: 5px;
+    bottom: 26px;
+    color: #fff;
+    content: attr(title);
+    left: 20%;
+    padding: 5px 15px;
+    position: absolute;
+    z-index: 98;
+    width: 220px;
+}
+.tooltip2:hover:before{
+    border: solid;
+    border-color: #F2230E transparent;
+    border-width: 6px 6px 0 6px;
+    bottom: 20px;
+    content: "";
+    left: 50%;
+    position: absolute;
+    z-index: 99;
+}
+
+    .tooltip3{
+    display: inline;
+    position: relative;
+
+	font-family: PT Sans Caption;
+	font-size: 12px;
+}
+.tooltip3:hover:after{
+    background: #F2230E;
+   /* background: rgba(0,0,0,.8);*/
+    border-radius: 5px;
+    bottom: 26px;
+    color: #fff;
+    content: attr(title);
+    left: 20%;
+    padding: 5px 15px;
+    position: absolute;
+    z-index: 98;
+    width: 220px;
+}
+.tooltip3:hover:before{
+    border: solid;
+    border-color: #F2230E transparent;
+    border-width: 6px 6px 0 6px;
+    bottom: 20px;
+    content: "";
+    left: 50%;
+    position: absolute;
+    z-index: 99;
+}
+
+    .tooltip4{
+    display: inline;
+    position: relative;
+
+	font-family: PT Sans Caption;
+	font-size: 12px;
+}
+.tooltip4:hover:after{
+    background: #F2230E;
+   /* background: rgba(0,0,0,.8);*/
+    border-radius: 5px;
+    bottom: 26px;
+    color: #fff;
+    content: attr(title);
+    left: 20%;
+    padding: 5px 15px;
+    position: absolute;
+    z-index: 98;
+    width: 220px;
+}
+.tooltip4:hover:before{
+    border: solid;
+    border-color: #F2230E transparent;
+    border-width: 6px 6px 0 6px;
+    bottom: 20px;
+    content: "";
+    left: 50%;
+    position: absolute;
+    z-index: 99;
+}.wwd_title{color:#3F3F3F;}
 .redlist{color:#D60000 !important;}
 .active{background-color: #8E8E8E !important; cursor:default;}
 .active:hover{color:#FFFFFF !important;}
