este es un update de Martin a las 6 : 51 pm
Aqui van editados algunos archivos más los estilos

--- a/css/style.css
+++ b/css/style.css
@@ -5804,7 +5804,7 @@ h1, h2, h3, h4, h5, h6
 
 	position:relative;
 
-	float:right;
+	/*float:right;*/
 
 	display:block;
 
@@ -7884,151 +7884,158 @@ h1, h2, h3, h4, h5, h6
             left: 450px;
             margin-top: 180px;
             width: 200px;
-            /*display: none;*/
+            display: none;
         }
         .v2{
             position: absolute;
             margin-left: 570px;
             top: 766px;
             width: 280px;
-            /*display: none;*/
+          display: none;
         }
         .v3{
 
             position: absolute;
             margin-top: 380px;
-            /*display: none;*/
+            display: none;
         }
           .v4{
 
             position: absolute;
             margin-top: 380px;
             margin-left: 750px;
-            /*display: none;*/
+            display: none;
         }
 
     .tooltip{
-    display: inline;
+  
     position: relative;
     font-size: 12px;
 	font-family: PT Sans Caption;
-}
-.tooltip:hover:after{
-    background: #F2230E;
-   /* background: rgba(0,0,0,.8);*/
+	   background: #F2230E;
+   
     border-radius: 5px;
     bottom: 26px;
     color: #fff;
-    content: attr(title);
-    left: 20%;
+ 
     padding: 5px 15px;
-    position: absolute;
+  
     z-index: 98;
-    width: 220px;
-}
-.tooltip:hover:before{
-    border: solid;
+   
+     border: solid;
     border-color: #F2230E transparent;
-    border-width: 6px 6px 0 6px;
-    bottom: 20px;
-    content: "";
-    left: 50%;
-    position: absolute;
+   
+    bottom: 190px;
+   
+    left: 90%;
+    
     z-index: 99;
 }
-
-
-    .tooltip2{
-    display: inline;
+  .tooltip2{
+  
     position: relative;
-	font-size: 12px;
+    font-size: 12px;
 	font-family: PT Sans Caption;
-}
-.tooltip2:hover:after{
-    background: #F2230E;
-   /* background: rgba(0,0,0,.8);*/
+	   background: #F2230E;
+   
     border-radius: 5px;
     bottom: 26px;
     color: #fff;
-    content: attr(title);
-    left: 20%;
+ 
     padding: 5px 15px;
-    position: absolute;
+  
     z-index: 98;
-    width: 220px;
-}
-.tooltip2:hover:before{
-    border: solid;
+   
+     border: solid;
     border-color: #F2230E transparent;
-    border-width: 6px 6px 0 6px;
+   
     bottom: 20px;
-    content: "";
+   
     left: 50%;
-    position: absolute;
+    
     z-index: 99;
 }
 
-    .tooltip3{
-    display: inline;
+.tooltip3{
+  
     position: relative;
-
+    font-size: 12px;
 	font-family: PT Sans Caption;
-	font-size: 12px;
-}
-.tooltip3:hover:after{
-    background: #F2230E;
-   /* background: rgba(0,0,0,.8);*/
+	   background: #F2230E;
+   
     border-radius: 5px;
     bottom: 26px;
     color: #fff;
-    content: attr(title);
-    left: 20%;
+ 
     padding: 5px 15px;
-    position: absolute;
+  
     z-index: 98;
-    width: 220px;
-}
-.tooltip3:hover:before{
-    border: solid;
+   
+     border: solid;
     border-color: #F2230E transparent;
-    border-width: 6px 6px 0 6px;
+   
     bottom: 20px;
-    content: "";
+   
     left: 50%;
-    position: absolute;
+    
     z-index: 99;
 }
-
-    .tooltip4{
-    display: inline;
+.tooltip4{
+  
     position: relative;
-
+    font-size: 12px;
 	font-family: PT Sans Caption;
-	font-size: 12px;
-}
-.tooltip4:hover:after{
-    background: #F2230E;
-   /* background: rgba(0,0,0,.8);*/
+	   background: #F2230E;
+   
     border-radius: 5px;
     bottom: 26px;
     color: #fff;
-    content: attr(title);
-    left: 20%;
+ 
     padding: 5px 15px;
-    position: absolute;
+  
     z-index: 98;
-    width: 220px;
-}
-.tooltip4:hover:before{
-    border: solid;
+   
+     border: solid;
     border-color: #F2230E transparent;
-    border-width: 6px 6px 0 6px;
-    bottom: 20px;
-    content: "";
+   
+    bottom: 180px;
+   
     left: 50%;
-    position: absolute;
+    
     z-index: 99;
-}.wwd_title{color:#3F3F3F;}
+}
+.wwd_title{color:#3F3F3F;}
 .redlist{color:#D60000 !important;}
 .active{background-color: #8E8E8E !important; cursor:default;}
 .active:hover{color:#FFFFFF !important;}
+
+.flc1{
+	position: absolute;
+	top: 280px;
+	left: 390px;
+	cursor: pointer;
+}
+.flc2{
+	position: absolute;
+	top: 500px;
+	left: 590px;
+	cursor: pointer;
+}
+.flc3{
+	position: absolute;
+	top: 500px;
+	left: 150px;
+	cursor: pointer;
+}
+.flc4{
+	position: absolute;
+	top: 700px;
+	left: 390px;
+	cursor: pointer;
+}
+.ctr{
+	position: absolute;
+	top: 480px;
+	left: 350px;
+	cursor: pointer;
+}
