--- a/css/style.css
+++ b/css/style.css
@@ -3021,9 +3021,6 @@ footer
 
 	left: 0px;
 
-	width:100%;
-
-	height:100%;
 
 }
 
@@ -3044,6 +3041,7 @@ footer
 	display:none; 
 
 	z-index:1; 
+
 
 }
 
@@ -3147,7 +3145,7 @@ footer
 
 	float:left;
 
-	margin-top: 22px;
+	margin-top: -40px;
 
 	background-image:url(../assets/loaders/loader.gif);
 
@@ -5817,16 +5815,18 @@ h1, h2, h3, h4, h5, h6
 	cursor:pointer;
 
 	cursor: hand;
+	background-color:#FFFFFF !important;
 
 }
 
 .filter-button.selected
 
 {
-
+	background-color: #DC001B !important;
 	color: #ffffff;
 
 }
+.filter-button:hover{background-color: #2c2c2c !important;}
 
 
 
@@ -6228,7 +6228,7 @@ h1, h2, h3, h4, h5, h6
 
 	font-size:18px;
 
-	color:#3f3f3f;
+	color:#FFFFFF;
 
     text-align:left;
 
@@ -7581,7 +7581,14 @@ h1, h2, h3, h4, h5, h6
 /*						TOUCH DEVICES								*/
 
 /*------------------------------------------------------------------*/
+
+@media only screen and (900px) and (1000px){
+	.li_nave{	visibility: hidden;}
+
+}
 @media only screen and (min-width: 1100px) and (max-width: 1290px){
+	.li_nave{	visibility: hidden;}
+
 	#module-contact-holder .title-holder{ width: 50%; margin-left:7%;}
 	#module-contact-holder{margin-top: 27.3%;}
 	#module-contact-holder .custom-separator-careers{width:96%; margin-left:2%;}
@@ -7592,6 +7599,8 @@ h1, h2, h3, h4, h5, h6
 		padding: 4px;
 	}
 	#contact-form .form-buttons{width: 100%;}
+	.li_nave{	visibility: hidden;}
+
 }
 @media only screen and (min-width: 100px) and (max-width: 480px){
 	
@@ -7619,6 +7628,7 @@ h1, h2, h3, h4, h5, h6
 	}
 	.jobsHoldercontainer{margin-top: 22.3%;}
 }
+
 @media only screen and (min-width: 200px) and (max-width: 1030px){}
 @media only screen and (min-width: 1025px) and (max-width: 1200px){
 	#standard-banner{ height: 363px; }
@@ -7634,9 +7644,8 @@ h1, h2, h3, h4, h5, h6
 	.module-galleries{ width: 722px; }
 }
 
-@media only screen and (min-width: 768px) and (max-width: 1024px)
-
-{
+@media only screen and (min-width: 768px) and (max-width: 1024px){
+	.wrapper_text{	float: left; width: 30%;}
 	.template-logo{ margin-left: -80px; }
 	.template-menu{ margin: 0px; }
     #audio-player{left: 0px;}
@@ -7660,9 +7669,7 @@ h1, h2, h3, h4, h5, h6
 	.full-width-info-container{ width: 240px; }
 }
 
-@media only screen and (min-width: 480px) and (max-width: 767px)
-
-{
+@media only screen and (min-width: 480px) and (max-width: 767px){
 	#menu-container{ position:absolute; width: 100%; height:auto; left:0px; z-index:10; }
 	#template-menu{ display: none; }
     #audio-player{display:none;}
@@ -7735,9 +7742,7 @@ h1, h2, h3, h4, h5, h6
 
 }
 
-@media only screen and (max-width: 479px)
-
-{
+@media only screen and (max-width: 479px){
 
 	#menu-container{ position:absolute; width: 100%; height:auto; left:0px; z-index:10; }
 
@@ -7758,6 +7763,8 @@ h1, h2, h3, h4, h5, h6
 	#menu-hider-background{ width: 100%; height: 10px; }
 
 	#menu-hider-icon{ background-position: -299px -200px; height: 28px; width: 38px; left:50%; top: 3px; margin-left: -15px; }
+
+	.wrapper_text{	float: left;}
 
 	
 
@@ -7815,20 +7822,12 @@ h1, h2, h3, h4, h5, h6
 	.wrapper_nave img{ width: 50% !important;}
 	
 	.ctr{
-		margin-top: -80px !important;
+		margin-top: 10px !important;
 	}
 	.flc1{
 		margin-left: 159px !important;
 	}
 	.flc2{
-		margin-left: 232px !important;
-		margin-top: 32px !important;
-	}
-	.flc3{
-		margin-left: -17px !important;
-		margin-top: -37px !important;
-	}
-	.flc4{
 		margin-left: 145px !important;
 		margin-top: 32px !important;
 	}
@@ -7837,9 +7836,7 @@ h1, h2, h3, h4, h5, h6
 
 
 .wrapper_nave{
-
-
-	width:55%;  float:left; position:relative; z-index:1000; margin-left:85px;
+	width:55%;  float:left; position:relative; z-index:1000; margin-left:155px; margin-top: 95px;
 }
 
 
@@ -7848,19 +7845,38 @@ h1, h2, h3, h4, h5, h6
 }
 .whatwedomenu .filter-button{
 	float:left;
+	padding:2px 0 !important;
+
+tururu
+	
+}
+@media only screen and (min-width: 50px) and (max-width: 400px){
+	.whatwedomenu .filter-button{
+	    float: left;
+	    margin-bottom: 10px;
+	    margin-right: 30px;
+	    padding: 2px 0 !important;
+	}
+}
+.whatwedomenu .active{
+	float:left;
+	padding:5px !important;
 }
 .whatwedomenu .filter-button:hover{
-	background-color: #FFFFFF;
+	background-color: #000000;
 	color:#3F3F3F;
 }
 .whatwedomenu .filter-button a{
 	text-decoration: none;
-	color: #FFFFFF;
+	color: #000;
+	padding:5px;
 }
-.whatwedomenu .filter-button a{
-	text-decoration: none;
+.whatwedomenu .selected a{
+	color: #FFFFFF !important;
 }
-
+.whatwedomenu .filter-button a:hover{
+	color:#FFFFFF !important;
+}
 .v1{
 
            float: left;
@@ -7873,7 +7889,7 @@ h1, h2, h3, h4, h5, h6
             float: left;
             width: 150px;
             margin-top: 55px;
-            margin-left: -65px;
+            margin-left: -45px;
           display: none;
      
         }
@@ -8201,4 +8217,30 @@ h1, h2, h3, h4, h5, h6
 #jobcontact-form .custom-input-file:hover .archivo {
     background-color: #fff;
     color: #000;   
+}
+.li_nave{
+	float: left;
+	position: relative;
+	top: 36px;
+	
+}
+.wrapper_text{
+	color: #fff;
+	position: relative;
+	padding-top: 55px;
+	font-family: PT Sans Caption;
+	margin-left: 10%; width: 1275px;
+
+}
+.lets{
+	color: #d60000;
+
+}
+.text_lets{
+	margin-top: 15px;
+}
+.bolder{
+	color: #fff;
+	font-weight: bold;
+	text-transform: uppercase;
 }
