--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,24 @@
 /**********************************************/
+/* FONT FACE                                  */
+/**********************************************/
+@font-face {
+    font-family: 'CBold';
+    src: url('fonts/bold.eot');
+    src: url('fonts/bold.eot') format('embedded-opentype'),
+         url('fonts/bold.woff') format('woff'),
+         url('fonts/bold.ttf') format('truetype'),
+         url('fonts/bold.svg#CenturyGothicBold') format('svg');
+}
+@font-face {
+    font-family: 'CRegular';
+    src: url('fonts/regular.eot');
+    src: url('fonts/regular.eot') format('embedded-opentype'),
+         url('fonts/regular.woff') format('woff'),
+         url('fonts/regular.ttf') format('truetype'),
+         url('fonts/regular.svg#CenturyGothicRegular') format('svg');
+}
+
+/**********************************************/
 
 /*     RESET             					  */
 
@@ -620,7 +640,7 @@ submenu holder has overflow hidden */
 
 	padding-left:14px;
 
-	font-family: PT Sans Caption; /*'Open Sans',sans-serif;*/
+	font-family: CRegular; /*'Open Sans',sans-serif;*/
 
 	font-size: 12px;	
 
@@ -694,7 +714,7 @@ submenu holder has overflow hidden */
 
 {	
 
-	font-family: PT Sans;
+	font-family: CRegular;
 
 	font-size: 13px;
 
@@ -848,7 +868,7 @@ submenu holder has overflow hidden */
 
     white-space: nowrap;
 
-	font-family:PT Sans;
+	font-family:CRegular;
 
 	font-weight: normal;
 
@@ -1103,7 +1123,7 @@ footer
 
     padding-top: 3px;
 
-    font-family:PT Sans;
+    font-family:CBold;
 
 	font-weight: bold;
 
@@ -1229,7 +1249,7 @@ footer
 
 	width: 100%;    
 
-    font-family:PT Sans;
+    font-family:CRegular;
 
 	font-weight: normal;
 
@@ -1725,7 +1745,7 @@ footer
 
     display:block;
 
-    font-family:Century Gothic, Arial;
+    font-family:CRegular, Arial;
 
 	font-weight: normal;
 
@@ -1803,7 +1823,7 @@ footer
 
 	padding: 10px !important;
 
-	font-family: PT Sans;
+	font-family: CRegular;
 
 	font-size:20px;
 
@@ -2313,7 +2333,7 @@ footer
 
 	display:block;
 
-	font-family:PT Sans;
+	font-family:CRegular;
 
 	font-weight: normal;
 
@@ -2419,7 +2439,7 @@ footer
 
 	margin-left: 20px;
 
-	font-family:PT Sans;
+	font-family:CBold;
 
 	font-weight: bold;
 
@@ -2459,7 +2479,7 @@ footer
 
 	margin-left: 20px;
 
-	font-family:PT Sans;
+	font-family:CBold;
 
 	font-weight: bold;
 
@@ -2645,7 +2665,7 @@ footer
 
 	margin-top: 15px;
 
-	font-family:PT Sans;
+	font-family:CBold;
 
 	font-weight: bold;
 
@@ -2665,7 +2685,7 @@ footer
 
 	margin-top: 15px;
 
-	font-family:PT Sans;
+	font-family:CRegular;
 
 	font-weight: normal;
 
@@ -2897,7 +2917,7 @@ footer
 
     
 
-    font-family: PT Sans;
+    font-family: CRegular;
 
     font-size: 18px;
 
@@ -3061,7 +3081,7 @@ footer
 
 {
 
-	font-family:PT Sans Caption;
+	font-family:CRegular;
 
 	font-weight: normal;
 
@@ -3091,7 +3111,7 @@ footer
 
 {
 
-	font-family:PT Sans;
+	font-family:CRegular;
 
 	line-height:170%;
 
@@ -3137,22 +3157,13 @@ footer
 
 
 
-.media-holder
-
-{
-
+.media-holder{
 	clear:both;
-
 	float:left;
-
-	margin-top: -40px;
-
+	margin-top: -110px;
 	background-image:url(../assets/loaders/loader.gif);
-
     background-repeat:no-repeat;
-
 	background-position:center;
-
 }
 
 
@@ -3249,16 +3260,10 @@ footer
 
 }
 
-#module-text-page-holder-ethics
-
-{
-
+#module-text-page-holder-ethics{
 	display:inline-block;
-
 	position:relative;
-
-	margin:45px 45px;
-
+	margin:0px 45px 45px 45px;
 }
 
 .sub-title-text-ethics
@@ -3267,7 +3272,7 @@ footer
 
 	margin-left:152px;
 
-	font-family:PT Sans;
+	font-family:CRegular;
 
 	font-weight: normal;
 
@@ -3333,7 +3338,7 @@ footer
 
 {
 
-	font-family:PT Sans;
+	font-family:CRegular;
 
 	line-height:170%;
 
@@ -3547,9 +3552,7 @@ footer
 
 	margin: 0 0 20px;
 
-	font-family:PT Sans;
-
-	font-weight: bold;
+	font-family:CBold;
 
 	font-size:18px;
 
@@ -3615,7 +3618,7 @@ footer
 
 	padding: 3%;
 
-	font-family: PT Sans; /*'Open Sans',sans-serif;*/
+	font-family: CRegular; /*'Open Sans',sans-serif;*/
 
 	font-size: 13px;
 
@@ -3936,7 +3939,7 @@ footer
 }
 
 .contact-information-title p{
-	font-family:PT Sans;
+	font-family:CRegular;
 	font-weight: bold;
 	font-size:20px;
 	color:#FFF; 
@@ -3978,7 +3981,7 @@ footer
 
 	margin-top: 8px;
 
-	font-family:PT Sans;
+	font-family:CRegular;
 
 	font-weight: normal;
 
@@ -3998,7 +4001,7 @@ footer
 
 	float: left;	
 
-	font-family:PT Sans;
+	font-family:CRegular;
 
 	font-weight: normal;
 
@@ -4016,7 +4019,7 @@ footer
 
 {
 
-	font-family:PT Sans;
+	font-family:CRegular;
 
 	font-weight: normal;
 
@@ -4087,7 +4090,7 @@ footer
 
 	border: none;
 
-    font-family:PT Sans;
+    font-family:CRegular;
 
 	font-weight: normal;
 
@@ -4169,7 +4172,7 @@ footer
 
 	border: none;
 
-    font-family:PT Sans;
+    font-family:CRegular;
 
 	font-weight: normal;
 
@@ -4229,7 +4232,7 @@ footer
 
 	border: none;
 
-    font-family:PT Sans;
+    font-family:CRegular;
 
 	font-weight: normal;
 
@@ -4301,9 +4304,7 @@ footer
 
 	display:none;
 
-	font-family:PT Sans;
-
-	font-weight: bold;
+	font-family:CBold;
 
 	text-decoration: none;
 
@@ -4361,7 +4362,7 @@ footer
 
 {
 
-	font-family:PT Sans;
+	font-family:CRegular;
 
 	font-weight: normal;
 
@@ -4737,7 +4738,7 @@ footer
 
 	padding: 5px 0px 5px 0px;
 
-	font-family: PT Sans; /*'Open Sans',sans-serif;*/
+	font-family: CRegular; /*'Open Sans',sans-serif;*/
 
 	font-size: 16px;
 
@@ -4881,7 +4882,7 @@ h1, h2, h3, h4, h5, h6
 
 	color: #444444;
 
-    font-family: PT Sans Caption,'Open Sans','Lucida Sans Unicode','Lucida Grande',sans-serif;
+    font-family:CRegular,'Open Sans','Lucida Sans Unicode','Lucida Grande',sans-serif;
 
     font-weight: normal;
 
@@ -4955,7 +4956,7 @@ h1, h2, h3, h4, h5, h6
 
 	padding: 5px 0px 5px 0px;
 
-	font-family: PT Sans; /*'Open Sans',sans-serif;*/
+	font-family: CRegular; /*'Open Sans',sans-serif;*/
 
 	font-size: 13px;
 
@@ -5059,7 +5060,7 @@ h1, h2, h3, h4, h5, h6
 
 	width: 100%;
 
-	font-family:PT Sans;
+	font-family:CRegular;
 
 	font-weight: normal;
 
@@ -5077,7 +5078,7 @@ h1, h2, h3, h4, h5, h6
 
 {
 
-	font-family:PT Sans;
+	font-family:CRegular;
 
 	font-weight: normal;
 
@@ -5105,7 +5106,7 @@ h1, h2, h3, h4, h5, h6
 
 	padding-top: 20px;
 
-	font-family: PT Sans; 
+	font-family: CRegular; 
 
 }
 
@@ -5269,7 +5270,7 @@ h1, h2, h3, h4, h5, h6
 
 	width: 90%;
 
-	font-family:PT Sans;
+	font-family:CBold;
 
 	font-weight: bold;
 
@@ -5423,7 +5424,7 @@ h1, h2, h3, h4, h5, h6
 
 	width:100%;
 
-	font-family:PT Sans;
+	font-family:CRegular;
 
 	font-weight: normal;
 
@@ -5796,7 +5797,7 @@ h1, h2, h3, h4, h5, h6
 
 	padding: 4px 13px;
 
-	font-family: PT Sans; /*'Open Sans',sans-serif;*/
+	font-family: CRegular; /*'Open Sans',sans-serif;*/
 
 	font-size: 13px;	
 
@@ -6222,7 +6223,7 @@ h1, h2, h3, h4, h5, h6
 
 	float:left;
 
-	font-family:PT Sans;
+	font-family:CRegular;
 
 	font-weight: normal;
 
@@ -6296,7 +6297,7 @@ h1, h2, h3, h4, h5, h6
 
 	display:block;
 
-	font-family:Century Gothic,Arial;
+	font-family:CRegular,Arial;
 
 	font-weight: normal;
 
@@ -6808,7 +6809,7 @@ h1, h2, h3, h4, h5, h6
 
 	width: 100%;
 
-	font-family:PT Sans;
+	font-family:CRegular;
 
 	font-weight: normal;
 
@@ -6836,7 +6837,7 @@ h1, h2, h3, h4, h5, h6
 
 	width: 100%;
 
-	font-family:PT Sans;
+	font-family:CRegular;
 
 	font-weight: normal;
 
@@ -7104,7 +7105,7 @@ h1, h2, h3, h4, h5, h6
 
     top: 9px;    
 
-    font-family:PT Sans;
+    font-family:CRegular;
 
 	font-weight: normal;
 
@@ -7452,7 +7453,7 @@ h1, h2, h3, h4, h5, h6
 
     margin: 6px auto;
 
-	font-family: PT Sans Caption; /*'Open Sans',sans-serif;*/
+	font-family: CRegular; /*'Open Sans',sans-serif;*/
 
 	font-size: 12px;	
 
@@ -7915,7 +7916,7 @@ tururu
     .tooltip{
   
     font-size: 12px;
-	font-family: PT Sans Caption;
+	font-family: CRegular;
 	   background: #F2230E;
    
     border-radius: 5px;
@@ -7939,7 +7940,7 @@ tururu
   
  
     font-size: 12px;
-	font-family: PT Sans Caption;
+	font-family: CRegular;
 	   background: #F2230E;
    
     border-radius: 5px;
@@ -7963,7 +7964,7 @@ tururu
 .tooltip3{
   
     font-size: 12px;
-	font-family: PT Sans Caption;
+	font-family:CRegular;
 	   background: #F2230E;
    
     border-radius: 5px;
@@ -7986,7 +7987,7 @@ tururu
 .tooltip4{
  
     font-size: 12px;
-	font-family: PT Sans Caption;
+	font-family: CRegular;
 	   background: #F2230E;
    
     border-radius: 5px;
@@ -8228,7 +8229,7 @@ tururu
 	color: #fff;
 	position: relative;
 	padding-top: 55px;
-	font-family: PT Sans Caption;
+	font-family: CRegular;
 	margin-left: 10%; width: 1275px;
 
 }
@@ -8241,6 +8242,8 @@ tururu
 }
 .bolder{
 	color: #fff;
-	font-weight: bold;
+	font-family: CBold;
 	text-transform: uppercase;
 }
+.hpdescription{font-size: 17px !important;}
+.hpdescription strong{font-family: CBold !important;}
